        PR middle-end/12920         * stor-layout.c (layout_type): Just return if type is         error_mark_node.         * c-decl.c (grokdeclarator): Immediately layout an         ARRAY_TYPE used in a pointer-to-array declarator.         * cp/decl.c (grokdeclarator): Immediately layout an         ARRAY_TYPE used in a pointer-to-array declarator.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@74733 138bc75d-0d04-0410-961f-82ee72b054a4